Fix/1208 legislation guidelines (#1716)
